fix z-index

--- a/scratch/ftemp/style.css
+++ b/scratch/ftemp/style.css
@@ -33,6 +33,7 @@ body {
   padding: 0 1em;
   top: 0;
   left: 0;
+  z-index: 100;
 }
 
 .top-bar {
